# handler/service.go
@@ -14,6 +14,8 @@ type Service interface {
 	Register(ctx context.Context, regRequest *generated.RegistrationRequest) (string, []string)
 	Login(ctx context.Context, loginRequest *generated.LoginRequest) (string, error)
 	GetUserProfile(ctx context.Context, token string) (generated.UserProfile, error)
+	UpdateUserProfile(ctx context.Context,
+		updateUserProfileRequest generated.UpdateUserProfileRequest, token string) (generated.UserProfile, error)
 }
 
 type service struct {
@@ -92,4 +94,22 @@ func (s *service) GetUserProfile(ctx context.Context, token string) (generated.U
 
 	userID := claims["user_id"].(string)
 	return s.Repository.GetUserProfile(ctx, userID)
+}
+
+func (s *service) UpdateUserProfile(ctx context.Context, updateUserProfileRequest generated.UpdateUserProfileRequest,
+	token string) (generated.UserProfile, error) {
+	jwtToken, err := s.Validator.ValidateJWTToken(token)
+	if err != nil {
+		return generated.UserProfile{}, err
+	}
+
+	claims, ok := jwtToken.Claims.(jwt.MapClaims)
+	if !ok {
+		return generated.UserProfile{}, err
+	}
+
+	userID := claims["user_id"].(string)
+	fmt.Println(userID)
+	fmt.Println(updateUserProfileRequest)
+	return generated.UserProfile{}, nil
 }
